# fastapi

./: Notes.md  commands.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
migrations/: env.py
migrations/versions/: 18d70af7dee6_addded_relationship.py  190ccce5cb49_create_users_table.py  37cd96d3c5ae_initial_migration.py  647eb1da8865_added_roles_in_user_model.py  7db9595c6ed6_added_review_table.py  8d66b94586fc_creating_issue_tracker.py  930ef59a0ad6_added_password_field_to_user_model.py  9453c7baf791_added_foreign_key_user_to_book_model.py  a40a8f0613fe_added_review_table.py  f36269a81f80_book_model.py
src/: .env.settings  __init__.py  books.py  config.py  email.py  errors.py  main.py  middleware.py
src/auth/: dependencies.py  models.py  routers.py  schemas.py  service.py  utils.py
src/books/: books_data.py  models.py  routes.py  schema.py  service.py
src/db/: main.py  models.py  redis.py
src/demo/: routers.py  schema.py
src/issues/: routers.py  schema.py  service.py
src/reviews/: routers.py  schema.py  service.py
