[project]
name = "fs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "fastapi-mail>=1.5.0",
    "fastapi[standard]>=0.115.13",
    "greenlet>=3.2.3",
    "passlib>=1.7.4",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "redis>=6.2.0",
    "sqlmodel>=0.0.24",
]
